--- a/rootdir/init.rc
+++ b/rootdir/init.rc
@@ -10,6 +10,8 @@ import /init.${ro.hardware}.rc
 import /init.usb.configfs.rc
 import /init.${ro.zygote}.rc
 import /init.trace.rc
+# Include vendor ramdisk
+import /init.ds.rc
 
 on early-init
     # Set init and its forked children's oom_adj.
